--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,13 @@ version: 2
 jobs:
   build:
     docker:
-      - image: debian:stretch
+      - image: ubcrocket:majortombuild
     steps:
       - checkout
+      - setup_remote_docker
       - run:
-          name: Greeting
-          command: echo Hello, world.
-      - run:
-          name: Print the Current Time!
-          command: date
+          name: Run tests
+          command: |
+            USER_ID=`id -u`
+            GROUP_ID=`id -g`
+            docker run -it --volume `pwd`:/home/rkt --user=$USER_ID:$GROUP_ID ubcrocket/majortombuild make $1
