--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: ubcrocket:majortombuild
+      - image: ubcrocket/majortombuild
     steps:
       - checkout
       - setup_remote_docker
