--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,4 @@ jobs:
       - setup_remote_docker
       - run:
           name: Run tests
-          command: ./dmake.sh
+          command: sudo ./dmake.sh
