--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,4 @@ jobs:
       - run:
           name: Run tests
           command: |
-            cd build
-            make
-            ls
+            pwd
