Switch to dmake script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,7 @@ jobs:
       - run:
           name: Build project
           command: |
-            cd build
-            make clean
-            make
+            ./dmake.sh
       - run:
           name: Run sharetest image
           command: |
